src/actions.h

void start_loading_tweets(GtkListBox *list_box);
void start_loading_notifications(GtkListBox *list_box);
void start_loading_conversations(GtkListBox *list_box);
void start_loading_messages(GtkListBox *list_box, const gchar *conversation_id);
void start_loading_admin_users(const gchar *search);
void start_loading_admin_posts(const gchar *search);
void start_loading_admin_suspensions(void);
void start_loading_admin_reports(void);
void start_loading_admin_logs(const gchar *search);
void start_loading_admin_blocks(void);
void start_loading_admin_emojis(void);
void start_loading_admin_badges(void);
void start_loading_admin_dms(const gchar *search);
void start_loading_admin_shop(const gchar *search);
void start_loading_admin_communities(void);
gboolean perform_login(const gchar *username, const gchar *password);
void show_profile(const gchar *username);
gboolean perform_profile_notify_tweets(const gchar *username, gboolean notify);
gboolean perform_delete_profile_avatar(const gchar *username);
gboolean perform_delete_profile_banner(const gchar *username);
void start_loading_profile_highlights(const gchar *username);
void start_loading_bookmarks(GtkListBox *list_box);
void start_loading_lists(void);
void show_list_details(const gchar *list_id);
gboolean perform_block(const gchar *username, gboolean block);
gboolean perform_mute(const gchar *username, gboolean mute);
void set_timeline_type(TimelineType type);
TimelineType get_current_timeline_type(void);
void start_loading_timeline(GtkListBox *list_box);
void start_loading_communities(GtkListBox *list_box);
void start_loading_communities_search(GtkListBox *list_box, const gchar *query);
void start_loading_communities_trending(GtkListBox *list_box);
void start_loading_communities_recommended(GtkListBox *list_box);
void start_loading_my_communities(GtkListBox *list_box);
void start_loading_community_tweets(GtkListBox *list_box, const gchar *community_id);
void start_loading_community_members(const gchar *community_id, GtkListBox *list_box);
gboolean perform_create_community(const gchar *name,
                                  const gchar *description,
                                  const gchar *rules,
                                  const gchar *access_mode);
gboolean perform_update_community(const gchar *community_id,
                                  const gchar *name,
                                  const gchar *description,
                                  const gchar *rules,
                                  const gchar *access_mode);
gboolean perform_delete_community(const gchar *community_id);
gboolean perform_update_community_access_mode(const gchar *community_id, const gchar *access_mode);
void start_loading_account_requests(void);
void start_loading_my_shop(void);
void start_loading_for_you_interests(void);
void start_loading_muted_words(void);
void start_loading_muted_conversations(void);
void start_loading_delegates(void);
void start_loading_scheduled_posts(void);
void start_loading_explore(void);
void start_loading_articles(void);