src/api.zig

const c = @import("c.zig").c;
const types = @import("types.zig");

pub extern fn get_current_timeline_type() types.TimelineType;
pub extern fn set_timeline_type(timeline_type: types.TimelineType) void;
pub extern fn show_profile(username: [*c]const c.gchar) void;
pub extern fn show_list_details(list_id: [*c]const c.gchar) void;

pub extern fn start_loading_tweets(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_timeline(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_notifications(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_conversations(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_messages(list_box: [*c]c.GtkListBox, conversation_id: [*c]const c.gchar) void;
pub extern fn start_loading_admin_users(search: [*c]const c.gchar) void;
pub extern fn start_loading_admin_posts(search: [*c]const c.gchar) void;
pub extern fn start_loading_admin_suspensions() void;
pub extern fn start_loading_admin_reports() void;
pub extern fn start_loading_admin_logs(search: [*c]const c.gchar) void;
pub extern fn start_loading_admin_blocks() void;
pub extern fn start_loading_admin_emojis() void;
pub extern fn start_loading_admin_badges() void;
pub extern fn start_loading_admin_dms(search: [*c]const c.gchar) void;
pub extern fn start_loading_admin_shop(search: [*c]const c.gchar) void;
pub extern fn start_loading_admin_communities() void;
pub extern fn start_loading_bookmarks(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_lists() void;
pub extern fn start_loading_explore() void;
pub extern fn start_loading_communities(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_communities_search(list_box: [*c]c.GtkListBox, query: [*c]const c.gchar) void;
pub extern fn start_loading_communities_trending(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_communities_recommended(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_my_communities(list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_community_tweets(list_box: [*c]c.GtkListBox, community_id: [*c]const c.gchar) void;
pub extern fn start_loading_community_members(community_id: [*c]const c.gchar, list_box: [*c]c.GtkListBox) void;
pub extern fn start_loading_profile_highlights(username: [*c]const c.gchar) void;
pub extern fn start_loading_account_requests() void;
pub extern fn start_loading_my_shop() void;
pub extern fn start_loading_for_you_interests() void;
pub extern fn start_loading_muted_words() void;
pub extern fn start_loading_muted_conversations() void;
pub extern fn start_loading_delegates() void;
pub extern fn start_loading_scheduled_posts() void;
pub extern fn start_loading_articles() void;

pub extern fn perform_block(username: [*c]const c.gchar, block: c.gboolean) c.gboolean;
pub extern fn perform_mute(username: [*c]const c.gchar, mute: c.gboolean) c.gboolean;
pub extern fn perform_profile_notify_tweets(username: [*c]const c.gchar, notify: c.gboolean) c.gboolean;
pub extern fn perform_delete_profile_avatar(username: [*c]const c.gchar) c.gboolean;
pub extern fn perform_delete_profile_banner(username: [*c]const c.gchar) c.gboolean;
pub extern fn perform_create_community(name: [*c]const c.gchar, description: [*c]const c.gchar, rules: [*c]const c.gchar, access_mode: [*c]const c.gchar) c.gboolean;
pub extern fn perform_update_community(community_id: [*c]const c.gchar, name: [*c]const c.gchar, description: [*c]const c.gchar, rules: [*c]const c.gchar, access_mode: [*c]const c.gchar) c.gboolean;
pub extern fn perform_update_community_access_mode(community_id: [*c]const c.gchar, access_mode: [*c]const c.gchar) c.gboolean;
pub extern fn perform_delete_community(community_id: [*c]const c.gchar) c.gboolean;
pub extern fn perform_login(username: [*c]const c.gchar, password: [*c]const c.gchar) c.gboolean;
